--- a/index.html
+++ b/index.html
@@ -5,8 +5,174 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin Fashion</title>
+    <script src="https://kit.fontawesome.com/bf73affb68.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="bootstrap-css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Be The Penguins of Winter</h1>
+    <header style="background-color: #FFFBF0;">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="#"><img src="penguin-fashion-main/icons/Group 33072.png" width="291.11" height="39.27" alt="" class="d-inline-block align-text-top"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-black">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#">About
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="container d-block d-lg-flex align-items-center">
+        <div>
+          <h1 class="text-warning" style="width: 416px;">BE THE PENGUINS <span class="d-block" style="color:#363958;">OF WINTER</span></h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit consequatur, accusantium provident vitae illum quos autem porro aperiam pariatur eum. Quam assumenda esse qui velit nam ex similique adipisci impedit.</p>
+          <button class="btn btn-success rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+        </div>
+        <div>
+          <img width="350px" src="penguin-fashion-main/images/model.png" alt="">
+        </div>
+      </div>
+    </header>
+    <section class="container mb-3">
+      <h3 class="mt-3 mb-3" style="color:#363958;">WOMAN JACKET</h3>
+      <div class="row gy-4">
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-1.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Yellow Coat Jacket</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-2.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Ladies Jacket</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-3.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Woman Leather Jacket</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-4.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Snowboard Jacket Mens</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-5.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Man Leather Jackets</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 rounded">
+          <div class="card align-items-center pt-2 shadow-sm border-0" style="width: 370px;">
+            <div class="rounded" style="background-color: #F1F1F1; width: 334px;">
+              <img width="293px" src="penguin-fashion-main/images/jacket-6.png" class="card-img-top" alt="...">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title" style="color:#363958;">Man Casual Jackets</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <span class="text-warning fw-bolder">$350.00</span>
+              <button class="btn btn-success float-end rounded"><a href="#"></a><i class="fas fa-shopping-cart"></i>Buy Now</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row mt-5 gx-5 justify-content-center">
+          <div class="col-lg-6">
+            <div class="row gy-2">
+             <div class="col-12 col-lg-12 d-flex align-items-center shadow-sm p-2 rounded">
+              <div>
+                <img width="78" height="82" src="penguin-fashion-main/icons/image 12.png" alt="">
+              </div>
+              <div>
+                <h4 style="color:#363958;">Find The Perfect Fit</h4>
+                <p>Everybody is different, which is why we
+                  offer styles for every body.</p>
+              </div>
+             </div>
+             <div class="col-12 col-lg-12 d-flex align-items-center shadow-sm p-2 rounded">
+              <div>
+                <img width="78" height="82" src="penguin-fashion-main/icons/image 13.png" alt="">
+              </div>
+              <div>
+                <h4 style="color:#363958;">Free Exchanges</h4>
+                <p>One of the many reasons you can shop
+                  with peace of mind.</p>
+              </div>
+             </div>
+             <div class="col-12 col-lg-12 d-flex align-items-center shadow-sm p-2 rounded">
+              <div>
+                <img width="78" height="82" src="penguin-fashion-main/icons/image 14.png" alt="">
+              </div>
+              <div>
+                <h4 style="color:#363958;">Contact Our Seller</h4>
+                <p>They are here to help you. That's quite 
+                  literally what we pay them for.</p>
+              </div>
+             </div>
+            </div>
+          </div>
+          <div class="col-lg-6 pt-3">
+            <img width="340px" height="270px" src="penguin-fashion-main/images/shopping.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer style="background-color: #363958; height: 60px;">
+      <span class="float-center text-white">&copy;Tuhin Kabir|All_Rights_Reserved&copy;</span>
+    </footer>
+    <script src="bootstrap-js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
