--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Penguin Fashion</title>
     <script src="https://kit.fontawesome.com/bf73affb68.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap-css/bootstrap.min.css">
+    <style>
+      .container-footer{
+        display: grid;
+        grid-template-columns: repeat(4,2fr);
+        padding: 30px 0px 20px 60px;
+      }
+    </style>
 </head>
 <body>
     <header style="background-color: #FFFBF0;">
@@ -170,8 +177,35 @@
         </div>
       </div>
     </section>
-    <footer style="background-color: #363958; height: 60px;">
-      <span class="float-center text-white">&copy;Tuhin Kabir|All_Rights_Reserved&copy;</span>
+    <footer style="background-color: #363958;">
+      <div class="container-footer">
+        <div>
+          <img width="291" height="40" src="penguin-fashion-main/icons/Group 33072.png" alt="">
+          <p class="text-danger">Aliquam esse molestias itaque <br>
+            quaerat pariatur neque, iure <br>
+            necessitatibus ex?</p>
+        </div>
+        <div>
+          <h3 class="text-primary">Feautures</h3>
+        <p class="text-danger">Deals & Offer</p>
+        <p class="text-danger">Customer Reviews</p>
+        <p class="text-danger">Cancelation Policy</p>
+      </div>
+        <div>
+          <h3 class="text-primary">Quick Contact</h3>
+        <p class="text-danger">tuhinkabeer@gamil.com</p>
+        <p class="text-danger">01792531327</p>
+        <p class="text-danger">Belabo, Narsingdi</p>
+        <p class="text-danger">Dhaka,Bangladesh</p>
+      </div>
+        <div>
+          <h3 class="text-primary">Follow Us On</h3>
+        <p class="text-danger"><i class="fab fa-instagram"></i>Instagram</p>
+        <p class="text-danger"><i class="fab fa-youtube"></i>YouTube</p>
+        <p class="text-danger"><i class="fab fa-twitter"></i>Twitter</p>
+      </div>
+      </div>
+      <p class="text-warning">&copy;Tuhin|All Rights Reserved</p>
     </footer>
     <script src="bootstrap-js/bootstrap.bundle.min.js"></script>
 </body>
