--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         grid-template-columns: repeat(4,2fr);
         padding: 30px 0px 20px 60px;
       }
+      @media (min-width:1024px),(max-width:1400px) {
+        .container-footer{
+        display: grid;
+        grid-template-columns: repeat(4,2fr);
+      }
+    }
+      @media (max-width:768px) {
+        .container-footer{
+        display: grid;
+        grid-template-columns: repeat(1,2fr);
+      }
+      }
     </style>
 </head>
 <body>
@@ -181,31 +193,31 @@
       <div class="container-footer">
         <div>
           <img width="291" height="40" src="penguin-fashion-main/icons/Group 33072.png" alt="">
-          <p class="text-danger">Aliquam esse molestias itaque <br>
+          <p class="text-success">Aliquam esse molestias itaque <br>
             quaerat pariatur neque, iure <br>
             necessitatibus ex?</p>
         </div>
         <div>
           <h3 class="text-primary">Feautures</h3>
-        <p class="text-danger">Deals & Offer</p>
-        <p class="text-danger">Customer Reviews</p>
-        <p class="text-danger">Cancelation Policy</p>
+        <p class="text-white">Deals & Offer</p>
+        <p class="text-white">Customer Reviews</p>
+        <p class="text-white">Cancelation Policy</p>
       </div>
         <div>
           <h3 class="text-primary">Quick Contact</h3>
-        <p class="text-danger">tuhinkabeer@gamil.com</p>
-        <p class="text-danger">01792531327</p>
-        <p class="text-danger">Belabo, Narsingdi</p>
-        <p class="text-danger">Dhaka,Bangladesh</p>
+        <p class="text-white">tuhinkabeer@gamil.com</p>
+        <p class="text-white">01792531327</p>
+        <p class="text-white">Belabo, Narsingdi</p>
+        <p class="text-white">Dhaka,Bangladesh</p>
       </div>
         <div>
           <h3 class="text-primary">Follow Us On</h3>
-        <p class="text-danger"><i class="fab fa-instagram"></i>Instagram</p>
-        <p class="text-danger"><i class="fab fa-youtube"></i>YouTube</p>
-        <p class="text-danger"><i class="fab fa-twitter"></i>Twitter</p>
+        <p class="text-white"><i class="fab fa-instagram"></i>Instagram</p>
+        <p class="text-white"><i class="fab fa-youtube"></i>YouTube</p>
+        <p class="text-white"><i class="fab fa-twitter"></i>Twitter</p>
       </div>
       </div>
-      <p class="text-warning">&copy;Tuhin|All Rights Reserved</p>
+      <p class="text-danger">&copy;Tuhin|All Rights Reserved</p>
     </footer>
     <script src="bootstrap-js/bootstrap.bundle.min.js"></script>
 </body>
